--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,5 +1,19 @@
 extends ../includes/layout
 block main-content
+    .navbar.navbar-inverse.navbar-fixed-top
+        .container
+            .navbar-header
+                a.navbar-brand(href="/") Mean App
+                    h6 -My first MEAN app
+            .navbar-collapse.collapse
+                ul.nav.navbar-nav
+                    li
+                        a(href="/") Home
+
+
     section.content
         div(ng-view)
-    h2= mongoMessage
+
+
+        footer.container.text-center
+            p &copy; 2014 Mean App
