--- a/public/css/site.css
+++ b/public/css/site.css
@@ -14,3 +14,9 @@ footer {
 footer p {
   border-top: 1px solid #dfe0e2;
 }
+.navbar-form .form-group {
+  margin-left: 10px;
+}
+.navbar-form button {
+  margin-left: 10px;
+}
