--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -13,3 +13,10 @@ footer
   p
     border-top 1px solid #dfe0e2
 
+
+.navbar-form
+  .form-group
+    margin-left 10px
+  button
+    margin-left 10px;
+
