--- a/public/app/main/new-courses.jade
+++ b/public/app/main/new-courses.jade
@@ -1,6 +1,7 @@
 .panel.panel-primary
     .panel-heading.text-center New Courses
     .panel-body
-        .row(ng-repeat="courses in courses | orderBy:'published': true | limitTo:10")
-            .col-md-3 {{ courses.published | date:'MMM d'}}
-            .col-md-9 {{courses.name}}
+        .row(ng-repeat="course in courses | orderBy:'published':true | limitTo:10")
+            .col-md-3 {{course.published | date:'MMM d'}}
+            .col-md-9
+                a(href="/courses/{{course._id}}") {{course.title}}
