--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 61px;
+  padding-top: 69px;
 }
 .navbar-header a.navbar-brand {
   margin-top: -15px;
@@ -9,14 +9,27 @@ body {
   color: #ccc;
 }
 footer {
-  padding: 0 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 footer p {
-  border-top: 1px solid #dfe0e2;
+  border-top: 1px solid #d7e0e2;
 }
 .navbar-form .form-group {
   margin-left: 10px;
 }
 .navbar-form button {
   margin-left: 10px;
+}
+.top-padding-med {
+  padding-top: 10px;
+}
+.margin-left-med {
+  margin-left: 10px;
+}
+.toast-top-right {
+  top: 70px;
+}
+.toast-success {
+  background-color: #13987e;
 }
